--- a/2 GII/2do Semestre/POO/Curso 2018-2019/Tareas/Tarea 1.2 (nueva)/RodríguezHeras_CaroBarrera.tex
+++ b/2 GII/2do Semestre/POO/Curso 2018-2019/Tareas/Tarea 1.2 (nueva)/RodríguezHeras_CaroBarrera.tex
@@ -107,7 +107,9 @@
 		\item \textbf{¿Cuáles son los elementos/componentes que caracterizan un sistema software
 		desarrollado mediante una metodología orientada a objetos?}
 		
-		Los elementos que caracterizan un sistema software orientado a objetos son los objetos	y las clases.
+		Los elementos que caracterizan un sistema software orientado a objetos son los objetos y las clases, las cuales tienen métodos y atributos.
+		
+		También tienen una serie de características como: abstraccción, encapsulamiento, principio de ocultación, polimorfismo y herencia.
 		
 		\item \textbf{Diferencia entre clase y objeto.}
 		
