--- a/4 GII/Curriculum/Jesús Rodríguez Heras.tex
+++ b/4 GII/Curriculum/Jesús Rodríguez Heras.tex
@@ -84,7 +84,7 @@
 \NewPart{Datos personales}{}
 
 \PersonalEntry{Nacimiento}{25 de marzo, 1997}
-%\PersonalEntry{Address}{111 First St, New York}
+\PersonalEntry{Domicilio}{Barriada La Teja, c/Canal, Nº18, Jerez de la Frontera, Cádiz}
 \PersonalEntry{Teléfono}{(+34) 628-576-107}
 \PersonalEntry{E--Mail}{\url{jesusrh1997@gmail.com}}
 
@@ -93,7 +93,7 @@
 \NewPart{Educación}{}
 
 \EducationEntry{Ingeniería Informática}{2015-2019}{Escuela Superior de Ingeniería, Universidad de Cádiz}{
-Mención en Ingeniería de Computadores
+Mención en Ingeniería de Computadores.
 %\begin{itemize}
 %\item{Ingeniería de Computadores}
 %\item{Asignaturas más relevantes de carrera/especialidad}
@@ -103,10 +103,14 @@ Mención en Ingeniería de Computadores
 
 \sepspace
 
-\EducationEntry{CCNA Routing and Switching}{2016-2017}{Online}{Curso de introducción a las redes de computadores, 70 horas, Habilidad para montar y gestionar redes de computadores de medio-alto calibre}
-\EducationEntry{CCNA Security}{2017-2018}{Online}{Curso de seguridad de redes de computadores, 70 horas, Habilidad para montar y securizar redes de computadores de medio-alto calibre}
-\EducationEntry{CCNP Switch}{2018-2019}{Online}{Curso de switches en redes de computadores, 70 horas, Habilidad para montar redes de computadores de alto calibre en sus distintas capas}
-\EducationEntry{CCNP Route}{2018-2019}{Online}{Curso de routers en redes de computadores, 70 horas, Habilidad para montar redes de computadores de alto calibre}
+\EducationEntry{CCNA Routing and Switching}{2016-2017}{Online}{Curso de introducción a las redes de computadores, 70 horas, Habilidad para montar y gestionar redes de computadores de medio-alto calibre.\\}
+
+\EducationEntry{CCNA Security}{2017-2018}{Online}{Curso de seguridad de redes de computadores, 70 horas, Habilidad para montar y securizar redes de computadores de medio-alto calibre.\\}
+
+\EducationEntry{CCNP Switch}{2018-2019}{Online}{Curso de switches en redes de computadores, 70 horas, Habilidad para montar redes de computadores de alto calibre en sus distintas capas.\\}
+
+\EducationEntry{CCNP Route}{2018-2019}{Online}{Curso de routers en redes de computadores, 70 horas, Habilidad para montar redes de computadores de alto calibre.}
+
 %\EducationEntry{Curso extracurricular}{Verano 2001}{Lugar}{Descripcion del curso, horas invertidas, habilidades ganadas}
 
 %%% Work experience
@@ -126,16 +130,70 @@ Mención en Ingeniería de Computadores
 
 %%% Skills
 %%% ------------------------------------------------------------
+\newpage
+
+\NewPart{Conocimientos informáticos}
+\SkillsEntry{Programación}{C}
+\SkillsEntry{}{C++}
+\SkillsEntry{}{Java}
+\SkillsEntry{}{Python}
+\SkillsEntry{}{SQL}
+\SkillsEntry{}{MySQL}
+\SkillsEntry{}{VHDL}
+\SkillsEntry{}{UML}
+\SkillsEntry{}{Ensamblador}
+\SkillsEntry{}{SOAP}
+\SkillsEntry{}{REST\\}
+
+\SkillsEntry{Porcesador de textos}{\LaTeX}
+\SkillsEntry{}{Microsofr Office}
+\SkillsEntry{}{Open Office\\}
+\SkillsEntry{Sistemas operativos}{Linux}
+\SkillsEntry{}{Windows 7}
+\SkillsEntry{}{Windows 8}
+\SkillsEntry{}{Windows 10}
+\SkillsEntry{}{Guadalinex}
+\SkillsEntry{}{Unix\\}
+
+\SkillsEntry{Internet}{Chrome}
+\SkillsEntry{}{Mozilla}
+\SkillsEntry{}{Wordpress}
+\SkillsEntry{}{FTP}
+\SkillsEntry{}{SSH}
+\SkillsEntry{}{Git}
+\SkillsEntry{}{Servidor Apache\\}
+
+\SkillsEntry{Bases\\de datos}{MySQL}
+\SkillsEntry{}{SQL}
+\SkillsEntry{}{ORACLE\\}
+
+\SkillsEntry{Otros}{Configuración de equipos}
+\SkillsEntry{}{Configuración de redes}
+\SkillsEntry{}{Correo electrónico}
+\SkillsEntry{}{Informática general}
+\SkillsEntry{}{Internet general}
+\SkillsEntry{}{Mecanografía}
+
+\newpage
+\NewPart{Proyectos personales}
+\EducationEntry{Auditoría de Stimey}{2017-2018}{Escuela Superior de Ingeniería, Universidad de Cádiz}{Auditoría de la empresa Stimey creando un software servidor para controlar y monitorizar a los empleados y las ganancias e inventario de la empresa.\\}
+
+\EducationEntry{Altavoz bluetooth personalizado}{2017-2018}{Escuela Superior de Ingeniería, Universidad de Cádiz}{Creación y programación, bajo supervisión, de un altavoz bluetooth funcional que utiliza un terminal serie y un procesador ARM para la reproducción de audio.\\}
+
+\EducationEntry{Autómata solucionador de laberintos}{2017-2018}{Escuela Superior de Ingeniería, Universidad de Cádiz}{Creación y programación en arduino, bajo supervisión, de un robot capaz de salir de cualquier laberinto usando sensores de distancia, infrarrojos y CNY.}
+
+\NewPart{Logros}
+\EducationEntry{Trabajo de investigación en seguridad inalámbrica}{2017-2018}{Escuela Superior de Ingeniería, Universidad de Cádiz}{Colaboración con el departamento de Ingeniería en Automática, Electrónica, Arquitectura y Redes de Computadores de la Escuela Superior de Ingeniería en la investigación acerca de la seguridad en redes inalámbricas.}
+
 \NewPart{Habilidades personales}{}
-
 \SkillsEntry{Idiomas}{Español (nativo)}
-\SkillsEntry{}{Inglés (B1)}
+\SkillsEntry{}{Inglés (B1)\\}
 
-\SkillsEntry{Software}{LaTeX, Windows, Linux, Java, C, C++}
-\SkillsEntry{Soft skills}{Trabajo en equipos multiculturales}
+\SkillsEntry{Otras}{Trabajo en equipos multiculturales}
 \SkillsEntry{}{Flexibilidad y adaptación ante cambios en el proyecto}
 \SkillsEntry{}{Gran capacidad de comunicación}
 \SkillsEntry{}{Análisis y resolución de problemas}
+\SkillsEntry{}{Carnet de conducir tipo B y vehiculo propio}
 %\SkillsEntry{}{}
 
 
