--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Fantasy.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Fantasy.tex
@@ -1,11 +1,12 @@
 %%\documentclass[a4paper,12pt,oneside]{llncs}
-\documentclass[12pt,letterpaper]{article}
-\usepackage[right=2cm,left=3cm,top=2cm,bottom=2cm,headsep=0cm]{geometry}
+\documentclass{book}
+%\usepackage[right=2cm,left=3cm,top=2cm,bottom=2cm,headsep=0cm]{geometry}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Juego de caracteres usado en el archivo fuente: UTF-8
 \usepackage{ucs}
 \usepackage[utf8x]{inputenc}
+\usepackage{eurosym}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Juego de caracteres usado en la salida dvi
@@ -14,7 +15,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Ajusta maergenes para a4
-%\usepackage{a4wide}
+\usepackage{a4wide}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Uso fuente postscript times, para que los ps y pdf queden y pequeños...
@@ -22,8 +23,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Posibilidad de hipertexto (especialmente en pdf)
-%\usepackage{hyperref}
-\usepackage[bookmarks = true, colorlinks=true, linkcolor = black, citecolor = black, menucolor = black, urlcolor = black]{hyperref}
+\usepackage{hyperref}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Graficos 
@@ -48,11 +48,12 @@
 \usepackage{mathptm}
 
 %%% VARIOS:
-%\usepackage{slashbox}
+\usepackage{slashbox}
 \usepackage{verbatim}
 \usepackage{array}
 \usepackage{listings}
 \usepackage{multirow}
+\usepackage{hhline}
 
 %% MARCA DE AGUA
 %% Este package de "draft copy" NO funciona con pdflatex
@@ -62,70 +63,47 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Indenteacion en español...
 \usepackage[spanish]{babel}
-
+\usepackage{Estilos/Apuntes}
+\usepackage[svgnames,x11names,table]{xcolor}
 \usepackage{listings}
 % Para escribir código en C
-% \begin{lstlisting}[language=C]
+% \begin{verbatim}[language=C]
 % #include <stdio.h>
 % int main(int argc, char* argv[]) {
 % puts("Hola mundo!");
 % }
-% \end{lstlisting}
+% \end{verbatim}
 
+\title{{\Huge Robot móvil}\\\textcolor{White}{ }\\
+	\begin{LARGE} 
+		Diseño de Computadores Empotrados
+	\end{LARGE}}
+\author{Juan Pedro Rodríguez Gracia\\Jesús Rodríguez Heras\\Gabriel Fernando Sánchez Reina}
 
-\title{Documento de plan de proyecto}
-\author{Luis Gutiérrez Flores\\
-	Nicolás Ruiz Requejo\\
-	Jesús Rodríguez Heras\\
-	Arantzazu Otal Alberro\\
-	Alejandro Segovia Gallardo\\
-	Alejandro José Caraballo García\\
-	Gabriel Fernando Sánchez Reina}
+%%Configuracion del paquete listings
+\lstset{language=bash, numbers=left, numberstyle=\tiny, numbersep=10pt, firstnumber=1, stepnumber=1}
 
 \begin{document}
-	
 	\maketitle
-%	\begin{abstract} %Poner esto en todas las prácticas de PCTR
-%%		\begin{center}
-%%			\noindent
-%%		\end{center}
-%	\end{abstract}
-
 	\thispagestyle{empty}
 	\newpage
 	
 	\tableofcontents
 	\newpage
 	
-	%%\listoftables
-	%%\newpage
+	\part{Memoria}
+	\include{Doc1}
+	\include{Doc2}
+	\include{Doc3}
+	\include{Doc4}
+	\include{Doc5}
+	\include{Doc6}
+	\include{Doc7}
+	\include{Doc8}
+	\include{Doc9}
+	\include{Doc10}
 	
-	%%\listoffigures
-	%%\newpage
+	\part{Anexo de códigos}
+	\include{Anexo}
 	
-	%%%% REAL WORK BEGINS HERE:
-	
-	%%Configuracion del paquete listings
-	\lstset{language=bash, numbers=left, numberstyle=\tiny, numbersep=10pt, firstnumber=1, stepnumber=1, basicstyle=\small\ttfamily, tabsize=1, extendedchars=true, inputencoding=latin1}
-
-\section{Visión general}
-
-\section{Roles}
-\begin{enumerate}
-	\item 
-\end{enumerate}
-
-\section{Política de equipo}
-\subsection{Política de reuniones}
-
-\subsection{Concepto de tarea realizada}
-
-\section{Hitos} %Seguir poniendo los demás sprints
-\subsection{Sprint 0 (fecha por determinar)}
-\subsection{Sprint 1 (fecha por determinar)}
-
-\section{Reuniones}
-\subsection{Reunión 0 (Fecha por determinar)}
-\subsection{Reunión 1 (Fecha por determinar)}
-
 \end{document}
