--- a/4 GII/2do Semestre/PINF/Fantasy/Análisis de requisitos/Documento/Análisis de requisitos.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Análisis de requisitos/Documento/Análisis de requisitos.tex
@@ -73,7 +73,7 @@
 % \end{lstlisting}
 
 
-\title{Fantasy}
+\title{Análisis de requisitos}
 \author{Luis Gutiérrez Flores\\
 	Nicolás Ruiz Requejo\\
 	Jesús Rodríguez Heras\\
