--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Casos.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Casos.tex
@@ -1,113 +1,4 @@
-%%\documentclass[a4paper,12pt,oneside]{llncs}
-\documentclass[12pt,letterpaper]{article}
-\usepackage[right=2cm,left=3cm,top=2cm,bottom=2cm,headsep=0cm]{geometry}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Juego de caracteres usado en el archivo fuente: UTF-8
-\usepackage{ucs}
-\usepackage[utf8x]{inputenc}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Juego de caracteres usado en la salida dvi
-%% Otra posibilidad: \usepackage{t1enc}
-\usepackage[T1]{fontenc}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Ajusta maergenes para a4
-%\usepackage{a4wide}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Uso fuente postscript times, para que los ps y pdf queden y pequeños...
-\usepackage{times}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Posibilidad de hipertexto (especialmente en pdf)
-%\usepackage{hyperref}
-\usepackage[bookmarks = true, colorlinks=true, linkcolor = black, citecolor = black, menucolor = black, urlcolor = black]{hyperref}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Graficos 
-\usepackage{graphics,graphicx}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Ciertos caracteres "raros"...
-\usepackage{latexsym}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Matematicas aun más fuertes (american math dociety)
-\usepackage{amsmath}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage{multirow} % para las tablas
-\usepackage[spanish,es-tabla]{babel}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Fuentes matematicas lo mas compatibles posibles con postscript (times)
-%% (Esto no funciona para todos los simbolos pero reduce mucho el tamaño del
-%% pdf si hay muchas matamaticas....
-\usepackage{mathptm}
-
-%%% VARIOS:
-%\usepackage{slashbox}
-\usepackage{verbatim}
-\usepackage{array}
-\usepackage{listings}
-\usepackage{multirow}
-
-%% MARCA DE AGUA
-%% Este package de "draft copy" NO funciona con pdflatex
-%%\usepackage{draftcopy}
-%% Este package de "draft copy" SI funciona con pdflatex
-%%%\usepackage{pdfdraftcopy}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Indenteacion en español...
-\usepackage[spanish]{babel}
-
-\usepackage{listings}
-% Para escribir código en C
-% \begin{lstlisting}[language=C]
-% #include <stdio.h>
-% int main(int argc, char* argv[]) {
-% puts("Hola mundo!");
-% }
-% \end{lstlisting}
-
-
-\title{Casos de uso}
-\author{Luis Gutiérrez Flores\\
-	Nicolás Ruiz Requejo\\
-	Jesús Rodríguez Heras\\
-	Arantzazu Otal Alberro\\
-	Alejandro Segovia Gallardo\\
-	Alejandro José Caraballo García\\
-	Gabriel Fernando Sánchez Reina}
-
-\begin{document}
-	
-	\maketitle
-%	\begin{abstract} %Poner esto en todas las prácticas de PCTR
-%%		\begin{center}
-%%			\noindent
-%			Descripción de los casos de uso 
-%%		\end{center}
-%	\end{abstract}
-	\thispagestyle{empty}
-	\newpage
-	
-	\tableofcontents
-	\newpage
-	
-	%%\listoftables
-	%%\newpage
-	
-	%%\listoffigures
-	%%\newpage
-	
-	%%%% REAL WORK BEGINS HERE:
-	
-	%%Configuracion del paquete listings
-	\lstset{language=bash, numbers=left, numberstyle=\tiny, numbersep=10pt, firstnumber=1, stepnumber=1, basicstyle=\small\ttfamily, tabsize=1, extendedchars=true, inputencoding=latin1}
-
+\chapter{Casos de uso}
 \noindent
 Todos los casos de uso descritos a continuación, tienen la siguiente precondición implícita para poder usar dichos casos de uso en la aplicación final:
 \begin{itemize}
@@ -963,5 +854,3 @@ Todos los casos de uso descritos a continuación, tienen la siguiente precondici
 	\item \textbf{No-funcional:}
 	\item \textbf{Cuestiones:}
 \end{itemize}
-
-\end{document}
