--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Estilos/Apuntes.sty
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Estilos/Apuntes.sty
@@ -72,7 +72,7 @@
 \renewcommand{\ps@myheadings}{%
               \renewcommand{\@evenhead}{%
                             \hss\vbox{%
-                            \emph{Grado en Ingeniería Informática\hfill Escuela Superior de Ingeniería}}}
+                            \emph{Escuela Superior de Ingeniería\hfill Universidad de Cádiz}}}
               \renewcommand{\@oddhead}{%
                             \hss\vbox{%
                             \emph{Fantasy\hfill Stimey}}}
