--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Estilos/Apuntes.sty
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Inglés/Estilos/Apuntes.sty
@@ -72,7 +72,7 @@
 \renewcommand{\ps@myheadings}{%
               \renewcommand{\@evenhead}{%
                             \hss\vbox{%
-                            \emph{Degree in Computer Engineering\hfill High School of Enineering}}}
+                            \emph{Higher School of Enineering\hfill University of Cádiz}}}
               \renewcommand{\@oddhead}{%
                             \hss\vbox{%
                             \emph{Fantasy\hfill Stimey}}}
