--- a/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Fantasy.tex
+++ b/4 GII/2do Semestre/PINF/Fantasy/Documentación a entregar/Español/Fantasy.tex
@@ -95,11 +95,13 @@
 	\begin{titlepage}
 		\centering
 		
-		{\scshape\LARGE Escuela Superior de Ingeniería \par}
+		{\scshape\huge Escuela Superior de Ingeniería \par}
 		\vspace{1cm}
-		{\scshape\Large Universidad de Cádiz\par}
-		\vspace{1.5cm}
-		{\huge\bfseries Fantasy\par}
+		{\scshape\LARGE Universidad de Cádiz\par}
+		\vspace{1cm}
+		{\scshape\Large{Stimey}\par}
+		\vspace{1cm}
+		{\Huge\bfseries Fantasy\par}
 		\vspace{1cm}
 		{\Large\itshape Luis Gutiérrez Flores\\
 			Nicolás Ruiz Requejo\\
@@ -108,15 +110,15 @@
 			Alejandro Segovia Gallardo\\
 			Alejandro José Caraballo García\\
 			Gabriel Fernando Sánchez Reina\par}
-		\vspace{1cm}
+		\vspace{2.5cm}
 		\begin{table}[htb]
 			\centering
 			\begin{tabular}{ccc}
-				\includegraphics[width=0.2\textwidth]{UCA.png}\par\vspace{1.2cm} & \includegraphics[width=0.2\textwidth]{ESI.png}\par\vspace{1.2cm} & \includegraphics[width=0.2\textwidth]{Stimey.png}\par\vspace{1.2cm}
+				\includegraphics[width=0.15\textwidth]{UCA.png}\par\vspace{1.2cm} & \includegraphics[width=0.15\textwidth]{ESI.png}\par\vspace{1.2cm} & \includegraphics[width=0.15\textwidth]{Stimey.png}\par\vspace{1.2cm}
 			\end{tabular}
 		\end{table}
 %		\vfill
-		\large{Stimey}\par
+		
 		
 		
 		% Bottom of the page
@@ -129,8 +131,8 @@
 	\tableofcontents
 	\newpage
 	
-	\include{Requisitos}
-	\include{Casos}
+	\include{AnalisisRequisitos}
+	\include{CasosUso}
 %	\include{Doc3}
 %	\include{Doc4}
 %	\include{Doc5}
